Ajuste estilo para mobile

--- a/style.css
+++ b/style.css
@@ -955,7 +955,11 @@ span {
   }
 
   .home-img img {
-    width: 56vw;
+    width: 66vw;
+  }
+
+  .home-content{
+    margin-top: 0rem;
   }
 
   .heading {
